tests/algorithms/x/Pascal/data_compression/huffman.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/data_compression/huffman.pas
huffman.pas(9,21) Error: Type "Huffman" is not completely defined
huffman.pas(10,22) Error: Type "Huffman" is not completely defined
huffman.pas(190,51) Error: Identifier not found "makecount_freq_Leaf"
huffman.pas(190,24) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of {Dynamic} Array Of Huffman", expected "{Open} Array Of Pointer"
huffman.pas(200,20) Error: Identifier not found "build_tree_Node_21"
huffman.pas(200,38) Error: Error in type definition
huffman.pas(208,22) Error: Identifier not found "makebuild_tree_Node_21"
huffman.pas(209,61) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of <erroneous type>" expected "{Dynamic} Array Of Huffman"
huffman.pas(229,46) Error: Identifier not found "s"
huffman.pas(229,128) Error: Incompatible type for arg no. 1: Got "<erroneous type>", expected "Huffman"
huffman.pas(229,202) Error: Incompatible type for arg no. 1: Got "<erroneous type>", expected "Huffman"
huffman.pas(282) Fatal: There were 11 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
